--- a/src/style/App.css
+++ b/src/style/App.css
@@ -17,6 +17,10 @@
 .App-intro {
   font-size: large;
 }
+.Google-Signin {
+  margin-top: 20%;
+  margin-left: 40%
+}
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
